# scraping_anime

./: Cargo.toml
config/: Settings.json
src/: main.rs
src/animation/: getter.rs  mod.rs
src/animation/models/: anime.rs
src/models/: env_model.rs  mod.rs
src/settings/: config.rs
