[package]
name = "scrape_animation"
version = "0.1.0"
authors = ["issei.kariya <issei.kariya@zerobillbank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# config = "0.9"
async-std = { version = "1.5.0", features = ["attributes"] }
futures01 = "0.1.28"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await", "io-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.8"
serde_json = "1.0.0"
surf = "1.0.3"
